# ipfs-data-pipeline

ipfs-data-pipeline/: LICENSE  Makefile  README.md  docker-compose.yml
ipfs-data-pipeline/docs/: architecture.md
ipfs-data-pipeline/go-daemon/: Dockerfile  go.mod  go.sum
ipfs-data-pipeline/go-daemon/cmd/daemon/: main.go
ipfs-data-pipeline/go-daemon/internal/api/: handlers.go  middleware.go  server.go
ipfs-data-pipeline/go-daemon/internal/config/: config.go
ipfs-data-pipeline/go-daemon/internal/ipfs/: client.go
ipfs-data-pipeline/go-daemon/internal/metadata/: store.go
ipfs-data-pipeline/go-daemon/internal/replication/: monitor.go
ipfs-data-pipeline/go-daemon/internal/shard/: engine.go  engine_test.go
ipfs-data-pipeline/go-daemon/pkg/models/: models.go
ipfs-data-pipeline/python-client/: Dockerfile  pyproject.toml
ipfs-data-pipeline/python-client/pipeline_client/: __init__.py  benchmark.py  cli.py  client.py
ipfs-data-pipeline/python-client/tests/: test_client.py
ipfs-data-pipeline/scripts/: demo.sh  run-benchmarks.sh  setup.sh
