[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipfs-pipeline-client"
version = "1.0.0"
description = "Python client and CLI for the IPFS-backed distributed data pipeline"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
benchmark = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.scripts]
pipeline = "pipeline_client.cli:cli"

[tool.setuptools.packages.find]
include = ["pipeline_client*"]
